# Veloce

./: .gitignore  AGENTS.md  CREDITS.md  LICENSE.md  PLAN.md  README.md  package-lock.json  package.json  vite.config.js  vitest.config.js
scripts/: update_thumbnails.py
src/: dialog-base.js  favorite-icons.js  index.html  main.js  metadata-format.js  path-utils.js  preload.js  renderer-state.js  renderer-tabs.js  renderer-ui.js  renderer.js  state.js  style.css  ui.js  utils.js  viewer-state.js  viewer-ui.js  viewer.html  viewer.js
src-tauri/: .gitignore  Cargo.toml  about.hbs  about.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  scratch_test.rs  test_append.rs
test/: bookmark.test.js  context-menu.test.js  precache.test.js  rating.test.js  reload.test.js  selection-ui.test.js  setup.js  show-prompt.test.js  smart-folder.test.js  thumbnail.test.js  undo.test.js  video-seekbar.test.js  viewer-ui.test.js
