[package]
name = "veloce"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-copy-file", "fs-read-dir", "window-unmaximize", "fs-rename-file", "fs-create-dir", "window-close", "window-minimize", "window-start-dragging", "window-set-fullscreen", "window-set-size", "window-set-position", "path-all", "window-maximize", "protocol-asset", "shell-open", "devtools" ] }
serde = { version = "1", features = ["derive"] }
flate2 = "1.0"
trash = "3.3"
arboard = "3.3"
image = { version = "0.25", features = ["webp"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread"] }
rayon = "1.10.0"
mimalloc = "0.1.48"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
