[package]
name = "veloce"
version = "0.1.0"
description = "Veloce Image Viewer"
authors = ["matsumotoswitch"]
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
    "devtools",
    "fs-copy-file",
    "fs-create-dir",
    "fs-read-dir",
    "fs-rename-file",
    "path-all",
    "protocol-asset",
    "shell-open",
    "window-close",
    "window-maximize",
    "window-minimize",
    "window-set-fullscreen",
    "window-set-position",
    "window-set-size",
    "window-start-dragging",
    "window-unmaximize"
] }
serde = { version = "1", features = ["derive"] }
flate2 = "1.0"
trash = "3.3"
arboard = "3.3"
image = { version = "0.25", features = ["webp"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread"] }
rayon = "1.10.0"
mimalloc = "0.1.48"
notify = "6.1.1"
fast_image_resize = "3.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.52"
features = ["Win32_System_Com", "Win32_UI_Shell", "Win32_Graphics_Gdi", "Win32_Foundation"]

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
