[package]
name = "veloce"
version = "1.6.0"
description = "Veloce Image Viewer"
authors = ["matsumotoswitch"]
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-open",
    "devtools",
    "fs-copy-file",
    "fs-create-dir",
    "fs-read-dir",
    "fs-remove-file",
    "fs-rename-file",
    "path-all",
    "protocol-asset",
    "shell-open",
    "window-close",
    "window-maximize",
    "window-minimize",
    "window-set-fullscreen",
    "window-set-position",
    "window-set-size",
    "window-start-dragging",
    "window-unmaximize"
] }
serde = { version = "1", features = ["derive"] }
flate2 = "1.0"
trash = "3.3"
arboard = "3.3"
image = { version = "0.25", features = ["webp"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread"] }
mimalloc = "0.1.48"
walkdir = "2"

fast_image_resize = "5.1.4"
rayon = "1.10.0"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
memmap2 = "0.9"
rusqlite = { version = "0.31.0", features = ["bundled"] }
base64 = "0.22.1"

[target.'cfg(windows)'.dependencies.windows]
version = "0.52"
features = ["Win32_System_Com", "Win32_UI_Shell", "Win32_Graphics_Gdi", "Win32_Foundation", "Win32_UI_WindowsAndMessaging"]

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# 開発モード(npm run tauri dev)でも画像処理クレートを最適化してコンパイルし、サムネイル生成速度を爆速にする設定
[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
